--- a/pom.xml
+++ b/pom.xml
@@ -14,6 +14,7 @@
         <project.reporting.outputEncoding>UTF-8</project.reporting.outputEncoding>
         <spring-boot.version>2.3.7.RELEASE</spring-boot.version>
         <oss-version>3.15.1</oss-version>
+        <obs.version>3.23.9.1</obs.version>
         <hutool-version>5.8.22</hutool-version>
     </properties>
 
@@ -37,11 +38,19 @@
         </dependency>
 
 
+        <!--hutool-->
         <dependency>
             <groupId>cn.hutool</groupId>
             <artifactId>hutool-core</artifactId>
             <version>${hutool-version}</version>
             <scope>provided</scope>
+        </dependency>
+
+        <!--obs-sdk-->
+        <dependency>
+            <groupId>com.huaweicloud</groupId>
+            <artifactId>esdk-obs-java-bundle</artifactId>
+            <version>${obs.version}</version>
         </dependency>
 
 
